# The-Ariadne-s-Thread

./: Dockerfile  README.md  planner_notebook.ipynb  run.sh  run_rover.sh
ariadne/: CMakeLists.txt  package.xml  setup.cfg  setup.py  try_segmentation.py
ariadne/ariadne/: heli.py  rover.py
ariadne/cfg/: ariadne.perspective  ariadne_algos.cfg
ariadne/include/: RRT.py  planning.py
ariadne/launch/: ariadne.launch  ariadne_rover.launch  start_ariadne.launch.py  start_aridane_launch.py
ariadne/msg/: AriadneMap.msg
ariadne/scripts/: compare_planners.py  controller.py  fail_count.csv  heli.py  map_generator.py  results.csv  rover.py  rover_rotated.py
ariadne/scripts/compare_approach/: compare_planners.py  fail_count.csv  fail_count_20maps.csv  fail_count_250_maps_1.csv  fail_count_250_maps_2.csv  fail_count_50_map.csv  results.csv  results_20maps.csv  results_250_maps_1.csv  results_250_maps_2.csv  results_50_map.csv
ariadne/scripts/include/: AStar.py  AStar_orig.py  DStar.py  RRT.py  RRTStar.py  RRTStar_Old.py  controller.py  dubins.py  parameters.py  planner.py  planner_notebook.py  planning.py  utils.py
ariadne_msgs/: CMakeLists.txt  package.xml
curiosity_mars_rover_description/: package.xml
curiosity_mars_rover_description/scripts/: ackerman_6_wheels.py
curiosity_mars_rover_description/urdf/: curiosity_mars_rover.urdf
